tests/typing/bad/testfile-unbound_constructor-1.scala
class A(x: Int) { def m() { var a = new A() } }
object Main { def main(args: Array[String]) { } }
